--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .container{
     background-color: #fff;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 /* Top player style */
@@ -18,6 +21,7 @@ main{
     margin-bottom: 30px;
 }
 .section-title{
+    font-weight: 600;
     font-size: 24px;
     color: #562EFF;
     margin-top: 3px;
@@ -44,4 +48,38 @@ main{
 /* HR line */
 hr{
     border: 1px solid rgb(184, 184, 184);
+}
+
+/*-------------
+ Top Blog's Style 
+ --------------*/
+ .top-blogs{
+    margin-top: 30px;
+ }
+ .blogs{
+    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+ }
+.blog{
+    display: flex;
+}
+.blog-info{
+    margin-top: -22px;
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+    font-weight: 500;
+}
+.blog-author{
+    color: #9f9f9f;
+}
+.author{
+    color: #562EFF;
+    font-weight: 400;
+}
+.thumnail img{
+    width: 177px;
+    height: 117px;
 }
