--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ hr{
 .courses{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-   grid-column-gap: 24px;
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
     background-color: #fff; 
 }
 .course{
@@ -127,6 +128,16 @@ hr{
     background-color: #FFE4E8;
     border-radius: 15px;
     padding: 5px 10px;
+}
+.copy-right{
+    margin-top: 50px;
+    text-align: center;
+}
+.author{
+   
+    text-decoration: none;
+    font-weight: bold;
+    color: #FF4A60;
 }
 
 
